@@ -1,3 +1,10 @@
+2018-07-20  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-handle-file-truename):
+	* tramp-adb.el (tramp-adb-handle-file-truename):
+	* tramp-sh.el (tramp-sh-handle-file-truename): Fix problem
+	with trailing slash.  (Bug#32218)
+
 2018-07-06  Michael Albinus  <michael.albinus@gmx.de>
 
 	* Makefile.in:
